--- a/index.html
+++ b/index.html
@@ -110,9 +110,8 @@
   <footer>
     <p>&copy; 2023 zipT. All rights reserved.</p>
     <div class="social-links">
-      <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-      <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
-      <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
+      <a href="#"><img src="assets/facebook-icon.png" alt="Facebook"></a>
+      <a href="#"><img src="assets/instagram-icon.png" alt="Instagram"></a>
     </div>
   </footer>
 
