--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>zipT - Zip, Eat, Enjoy</title>
+  <title>zipT - Zip It Enjoy It</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <script src="email-script.js"></script>
 </head>
 <body>
   <header>
@@ -20,9 +22,9 @@
   <section id="hero">
     <div class="hero-content">
       <h1>Delicious Food Delivered Fast, Right to you!</h1>
-      <p>Order from the best local restaurants near you university.
-        Swift Delivery, Affordable Prices, and a Diverse Menu Selection.
-        Be a Part of Our Launch!.
+      <p>Order from the best local restaurants near you.
+        Experience swift delivery, unbeatable prices, and a diverse menu.
+        Be a part of out launch.
       </p>
       <a href="#cta" class="cta-button">Get Informed</a>
     </div>
@@ -49,7 +51,7 @@
     </div>
   </section>
 
-  <section id="testimonials">
+  <!-- <section id="testimonials">
     <h2>What Our Customers Say</h2>
     <div class="testimonials-list">
       <div class="testimonial">
@@ -63,23 +65,23 @@
         <cite>Yvonne Chepchirchir, Philosophy Student</cite>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section id="how-it-works">
     <h2>How It Works</h2>
     <ol class="steps-list">
       <li>
-        <img src="assets/step-1.png" alt="Step 1">
+        <img src="assets/order.png" alt="Step 1">
         <h3>Order Your Food</h3>
         <p>Browse through the app, select your favorite restaurant, and place your order.</p>
       </li>
       <li>
-        <img src="assets/step-2.png" alt="Step 2">
+        <img src="assets/delivery.png" alt="Step 2">
         <h3>Track Your Delivery</h3>
         <p>Sit back and relax while our delivery team zips your food to your doorstep.</p>
       </li>
       <li>
-        <img src="assets/step-3.png" alt="Step 3">
+        <img src="assets/tasty.png" alt="Step 3">
         <h3>Enjoy Your Meal</h3>
         <p>Dig in and savor your delicious meal from the comfort of your dorm room.</p>
       </li>
@@ -89,23 +91,26 @@
   <section id="restaurant-partners">
     <h2>Our Restaurant Partners</h2>
     <div class="restaurant-partners-list">
-      <img src="assets/restaurant-logo-1.png" alt="Restaurant 1">
-      <img src="assets/restaurant-logo-2.png" alt="Restaurant 2">
-      <img src="assets/restaurant-logo-3.png" alt="Restaurant 3">
-      <img src="assets/restaurant-logo-4.png" alt="Restaurant 4">
+      <img src="assets/zam-zam.png" alt="Zam Zam Cafe">
+      <img src="assets/lumo.png" alt="Prime Cafe">
+      <img src="assets/donda.png" alt="Donda Cafe">
+      <!-- <img src="assets/restaurant-logo-4.png" alt="Restaurant 4"> -->
     </div>
   </section>
   
   <section id="cta">
 	<h2>Inform me when you launch!</h2>
     <p>Sign up to our mailing list and be the first to know about our launch and exclusive offers.</p>
-    <a href="#signup-form" class="cta-button">Sign Up</a>
+    <!-- <a href="#signup-form" class="cta-button">Sign Up</a> -->
+    <div class="ml-embedded" data-form="e9SJR1"></div>
   </section>
 
-  <section id="signup-form">
+  <!-- <section id="signup-form">
     <h2>Join Our Mailing List</h2>
-    <!-- Your signup form content goes here -->
-  </section>
+     Your signup form content goes here
+    
+  </section> -->
+
 
   <footer>
     <p>&copy; 2023 zipT. All rights reserved.</p>
@@ -114,7 +119,5 @@
       <a href="#"><img src="assets/instagram-icon.png" alt="Instagram"></a>
     </div>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
